--- a/src/includes/langs/ru.ini
+++ b/src/includes/langs/ru.ini
@@ -695,3 +695,4 @@ watch_folder_logs = "Просмотр журналов папок"
 wednesday = "Среда"
 years = "Годы"
 youtube_trailer = "YouTube-трейлер"
+users = "Users"
