--- a/src/includes/langs/es.ini
+++ b/src/includes/langs/es.ini
@@ -300,7 +300,7 @@ movie_encode_started = "La codificación de la película ha comenzado. Pasará a
 movie_encode_stopped = "Se ha detenido la codificación de películas."
 movie_name = "Nombre de la película"
 movie_path_or_url = "Ruta de la película/URL"
-movies = "Cine"
+movies = "Películas"
 movies_info_2 = "Ocurrió un error al insertar en la base de datos, verifique el formulario."
 movies_info_3 = "El nombre de la película ya está en uso, seleccione otro."
 movies_info_4 = "No se importaron películas nuevas. Por favor verifique la entrada."
