--- a/src/includes/langs/es.ini
+++ b/src/includes/langs/es.ini
@@ -703,3 +703,25 @@ tv_guide = "Guia de televisión"
 import_multiple_movies = "Importar múltiples películas"
 import_review_movies = "Importar y revisar películas"
 mass_edit_movies = "Edición masiva de películas"
+add_access_codes = "Añadir códigos de acceso"
+menage_access_codes = "Administrar códigos de acceso"
+blocked_asns = "Bloqueo de ASNS"
+hmac_keys = "Llaves HMAC"
+supplirs = "Proveedores"
+add_providers = "Añadir proveedor"
+stream_providers = "Administrar proveedores"
+service_setup = "Configuración de servicio"
+mass_edit_stations = "Edición masiva de radio"
+import_multiple_stream = "Importar múltiples canales"
+import_review_stream = "Importar y revisar canales"
+reseller = "Revendedor"
+add_registered_user = "Añadir revendedor"
+manage_registered_user = "Administrar revendedores"
+mass_edit_resellers = "Edición masiva de revendedores"
+user_profile = "Perfil de usuario"
+general_settings = "Ajustes generales"
+backup_settings = "Copias de seguridad"
+cache_redis = "Caché y redis"
+plex_settings = "Ajustes de plex"
+watch_settings = ""
+logout = "salir"
