--- a/src/includes/langs/ru.ini
+++ b/src/includes/langs/ru.ini
@@ -707,4 +707,25 @@ tv_guide = "Телегид"
 import_multiple_movies = "Импорт нескольких"
 import_review_movies = "Импорт и просмотр"
 mass_edit_movies = "Массовое редактирование фильмов"
-
+add_access_codes = "Добавить коды доступа"
+menage_access_codes = "Управление кодами доступа"
+blocked_asns = "Заблокированные ASN"
+hmac_keys = "Ключи HMAC"
+supplirs = "Поставщики"
+add_providers = "Добавить поставщиков"
+stream_providers = "Поставщики потоков"
+service_setup = "Настройка сервиса"
+mass_edit_stations = "Массовое редактирование станций"
+import_multiple_stream = "Импорт нескольких"
+import_review_stream = "Импорт и проверка"
+reseller = "Реселлер"
+Aadd_registered_user = "Добавить зарегистрированного пользователя"
+manage_registered_user = "Управление зарегистрированным пользователем"
+mass_edit_resellers = "Массовое редактирование реселлеров"
+user_profile = "Профиль пользователя"
+general_settings = "Общие настройки"
+backup_settings = "Настройки резервного копирования"
+cache_redis = "Кэш и Redis"
+plex_settings = "Настройки Plex"
+watch_settings = "Настройки просмотра"
+logout = "Выйти"
